@@ -1,7 +1,5 @@
-# DO NOT EDIT THIS FILE - edit the master and reinstall.
 #
-#
-# $Id: cronlist.in,v 1.5 2020-10-08 22:53:06+05:30 Cprogrammer Exp mbhangui $
+# $Id: cronlist.in,v 1.6 2021-07-10 22:55:38+05:30 Cprogrammer Exp mbhangui $
 #
 # Rotate the logs at midnight
 5 01 * * * root @prefix@/bin/svc -a @servicedir@/*/log > /dev/null 2>&1
